[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TBankOA"
version = "0.1.0"
description = "Python клиент для работы с API сервиса Интернет-эквайринг от Т-Банка"
authors = [{ name = "hecurh", email = "hecker@hecur.ru" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2,<3"
]